Update image sources to use GitHub links

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                         <div class="founder-front relative rounded-2xl overflow-hidden border border-slate-700 bg-slate-800 group shadow-2xl">
                             <img 
                                 id="founder-img"
-                                src="IMG_4360.jpg" 
+                                src="https://github.com/daksh92/Dattamsha-website/blob/main/IMG_4360.jpeg" 
                                 alt="Daksh Sahni" 
                                 class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500"
                             >
@@ -542,7 +542,7 @@
                             <!-- AI Avatar Image with Base64 Fallback -->
                             <img 
                                 id="founder-ai-img"
-                                src="https://api.dicebear.com/7.x/avataaars/svg?seed=Daksh1&flip=true&rotate=0&scale=100&radius=0&backgroundColor=1e293b&clothing=blazerAndShirt&clothingColor=262e33&eyebrows=default&eyes=default&facialHair=beardLight&facialHairColor=262e33&mouth=smile&skin=light&top=shortHair&topColor=262e33" 
+                                src="https://github.com/daksh92/Dattamsha-website/blob/main/IMG_4235.png" 
                                 alt="Agent Daksh" 
                                 class="w-full h-full object-cover"
                             >
